# stricknani

./: .env.example  .env.sample  .envrc.example  .envrc.sample  .gitignore  .prettierignore  AGENTS.md  Dockerfile  IMPLEMENTATION.md  Justfile  README.md  SPEC.md  TODO.md  biome.json  edit.js  flake.nix  justfile  pyproject.toml  renovate.json  vendir.lock.yml  vendir.yml
.github/: dependabot.yml
.github/workflows/: ci.yaml  ci.yml  container.yaml  fmt.yaml  i18n.yaml  lint.yaml  nix-lint.yaml  nix.yaml  test.yaml  vendor.yaml
alembic/: env.py
alembic/versions/: 20241109_01_initial_schema.py  20250116_01_add_categories_and_tags.py  20250117_01_add_yarn_inventory.py
docs/: README.md  spec-and-implementation.md
hack/: vendir-check.sh  vendir-sync.sh
nix/: fastapi-csrf-protect.nix  module.nix  package.nix
scripts/: deploy.sh  fmt_template_js.py  lint_template_js_format.py  lint_template_js_syntax.py  renovate.sh  run.sh  todo.sh  trim.sh
src/stricknani_app/: database.py  dependencies.py  main.py  models.py  security.py
src/stricknani_app/routers/: auth.py  dashboard.py
src/stricknani_app/templates/: base.html  error.html  home.html  login.html  project_detail.html  register.html
stricknani/: __init__.py  alembic.ini  config.py  database.py  logging_config.py  main.py
stricknani/alembic/: env.py
stricknani/alembic/versions/: 10634dd5e7f1_add_is_ai_enhanced_to_projects.py  20241109_01_initial_schema.py  20250116_01_add_categories_and_tags.py  20250117_02_add_project_yarn_links.py  23436fc36892_promote_images.py  284f83a882b1_add_other_materials_to_projects.py  2f6d6c8c5e3a_add_link_archive_to_projects.py  3715ace479eb_repair_missing_audit_logs_table.py  3b710fa1e811_make_project_category_nullable.py  3d61196f82af_initial_schema.py  4067701db7fd_add_link_field_to_projects_and_yarns.py  55054a3b00c8_add_is_ai_enhanced_to_yarns.py  5b9f1d2c7a4e_add_link_archive_requested_at_to_projects.py  6f4b9a3a1c58_add_dye_lot_to_yarns.py  7c7d5a3c1f2a_add_recommended_needles_to_yarns.py  8b1a9d2f3c4e_add_stitch_sample_fields.py  8d4968463111_add_favorite_yarns.py  9f8d2d49f2b1_add_recommended_needles_to_projects.py  a49c99e32d8a_add_project_description.py  ab3be3af01cd_add_audit_logs.py  accb7972e17f_remove_gauge_and_recommended_needles_.py  b4e1c2d9f0ab_ensure_project_category_nullable.py  badbda3d0d91_add_link_archive_to_yarns.py  dc5805a0c03f_enforce_single_primary_yarn_image.py  f1a2b3c4d5e6_add_link_archive_failed.py  f56dd5536682_add_attachments.py  f672f9194075_rename_project_comment_to_notes.py
stricknani/importing/: __init__.py  importer.py  models.py  pipeline.py
stricknani/importing/extractors/: __init__.py  ai.py  html.py  pdf.py
stricknani/importing/images/: __init__.py  constants.py  deduplicator.py  downloader.py  validator.py
stricknani/importing/sources/: __init__.py  file.py  url.py
stricknani/importing/targets/: __init__.py
stricknani/locales/: messages.pot
stricknani/models/: __init__.py  associations.py  audit.py  base.py  category.py  enums.py  project.py  user.py  yarn.py
stricknani/prompts/: ai_ingest_baseline.txt
stricknani/routes/: admin.py  auth.py  gauge.py  projects.py  search.py  user.py  utils.py  yarn.py
stricknani/scripts/: admin.py  check_translations.py  cli.py  run.py  seed_demo.py
stricknani/services/: __init__.py  audit.py
stricknani/services/images/: __init__.py  dimensions.py
stricknani/services/projects/: __init__.py  attachments.py  categories.py  helpers.py  images.py  import_images.py  import_workflows.py  steps.py  tags.py  yarns.py
stricknani/services/yarn/: __init__.py  images.py  presentation.py
stricknani/static/: manifest.webmanifest  sw.js
stricknani/static/css/: app.css  project_detail_print.css
stricknani/static/js/: app.js
stricknani/templates/: base.html
stricknani/templates/admin/: _user_card.html  _user_count.html  users.html  users.js
stricknani/templates/auth/: login.html
stricknani/templates/errors/: 401.html  403.html  404.html  500.html  base.html
stricknani/templates/gauge/: calculator.html  calculator.js
stricknani/templates/macros/: buttons.html  cards.html  detail_layout.html  dialogs.html  image_upload.html  wysiwyg.html
stricknani/templates/projects/: _cards.html  _delete_dialog.html  _delete_dialog.js  _empty_state.html  _favorite_toggle.html  _import_dialog.html  _list_partial.html  categories.html  detail.html  detail.js  form.html  form.js  list.html
stricknani/utils/: ai_importer.py  ai_ingest.py  ai_provider.py  auth.py  files.py  gauge.py  gravatar.py  i18n.py  image_similarity.py  import_trace.py  importer.py  markdown.py  ocr.py  project_import.py  search_tokens.py  wayback.py
stricknani/web/: __init__.py  templating.py
tests/: conftest.py  sample-projects.json  test_admin.py  test_ai_import_redundancy.py  test_ai_ingest.py  test_ai_pdf_import.py  test_ai_provider.py  test_auth.py  test_cli.py  test_garnstudio_3491.py  test_garnstudio_9185.py  test_garnstudio_deep_river.py  test_garnstudio_diagram_legend.py  test_garnstudio_extraction.py  test_garnstudio_yarn_import.py  test_gauge.py  test_health.py  test_import_image_filter.py  test_imports.py  test_language.py  test_markdown_image_autocomplete.py  test_ocr.py  test_printing.py  test_project_file_import_attachments.py  test_project_yarn_cascade.py  test_projects.py  test_pwa.py  test_search.py  test_services_projects_helpers.py  test_user.py  test_wayback.py  test_yarn.py  test_yarn_file_import.py  test_yarn_import.py
(+44 files in other folders)
