[project]
name = "stricknani-app"
version = "0.1.0"
description = "A modern FastAPI-based project and media management website."
authors = [
  { name = "Stricknani" }
]
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.35",
  "passlib>=1.7.4",
  "python-multipart>=0.0.7",
  "jinja2>=3.1.4",
  "itsdangerous>=2.2.0",
  "alembic>=1.13.2",
  "argon2-cffi>=23.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "httpx>=0.27.2",
  "pytest-asyncio>=0.23.8"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["stricknani-app[dev]"]
