[project]
name = "stricknani"
version = "0.1.0"
description = "A self-hosted web app for managing knitting projects"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Philipp Schmitt", email = "philipp@schmitt.co" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.13.3",
    "babel>=2.14.0",
    "bcrypt>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "fastapi-csrf-protect>=1.0.7",
    "httpx>=0.28.1",
    "jinja2>=3.1.4",
    "markdown>=3.7",
    "nh3>=0.2.18",
    "openai>=1.57.0",
    "pypdf>=5.1.0",
    "pillow>=10.4.0",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "rich>=13.9.4",
    "scikit-image>=0.24.0",
    "sentry-sdk[fastapi]>=2.20.0",
    "sqlalchemy>=2.0.35",
    "trafilatura>=1.12.0",
    "uvicorn[standard]>=0.30.0",
    "waybackpy>=3.0.6",
    "weasyprint>=60.0",
    "pymupdf>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "types-markdown>=3.7.0.20240822",
]

[project.scripts]
stricknani = "stricknani.scripts.run:main"
stricknani-cli = "stricknani.scripts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = [
    "stricknani",
    "stricknani.routes",
    "stricknani.utils",
    "stricknani.scripts",
    "stricknani.alembic",
    "stricknani.alembic.versions",
]
include = [
    "stricknani/**",
]

[tool.hatch.build]
include = [
    "stricknani/**",
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    "stricknani/static/vendor",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "B008",  # Function call in default argument (required for FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["stricknani"]
known-third-party = ["alembic", "sqlalchemy"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
exclude = [
    "stricknani/static/vendor",
]

[[tool.mypy.overrides]]
module = [
    "fitz",
    "jose.*",
    "openai",
    "skimage.*",
    "weasyprint",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
